--- a/P009461.opf/meta.yml
+++ b/P009461.opf/meta.yml
@@ -10,8 +10,10 @@ source_metadata:
       title: ''
       volume_number: 1
       total_pages: 1200
+      base_file: v001.txt
     04cd1e861f3242809971d8ea8eb46ede:
       image_group_id: I1CZ1556
       title: ''
       volume_number: 2
       total_pages: 1058
+      base_file: v002.txt
