--- a/P009461.opf/layers/v001/Pagination.yml
+++ b/P009461.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: c86e682a42ff4f8183abe4894b281762
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   51f31ea9b49245cbb11e845d4688c30c:
