--- a/P009461.opf/layers/v002/Pagination.yml
+++ b/P009461.opf/layers/v002/Pagination.yml
@@ -1,5 +1,5 @@
 id: 91dc23ec733541bf94e6d57af0e7ca13
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   b4f7ecc8d56e4867b14663124a41c9b7:
